# genpay

./: Cargo.toml  README.md
repl/: main.rs
src/: cmd.rs  main.rs
