[package]
name = "genpay"
version = "0.0.1"
authors = ["Gledson Joaquim Lopes <gledsoul@gmail.com>"]
edition = "2021"

[lib]
name = "genpay_lib"
path = "lib/genpay.rs"

[[bin]]
name = "genpay_repl"
path = "repl/main.rs"

[[bin]]
name = "genpay_exe"
path = "src/main.rs"

[dependencies]
nom = "^7.1.1"
clap = "~2.31.2"
rustyline = "9.1.2"
rustyline-derive = "0.6.0"
